Avoid wrapping from links containers

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -38,6 +38,7 @@ input {
 .left-links, .right-links {
   display: flex;
   gap: 12px;
+  flex-wrap: nowrap;
 }
 
 ul {
